[workspace]
members = ["lexer", "cli", "parser", "interpreter", "compiler", "repl"]
default-members = ["cli"]
resolver = "2"

[workspace.dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
interpreter = { path = "./interpreter" }
compiler = { path = "./compiler" }
repl = { path = "./repl" }
